# Co-Agent-Recruitment

./: .env.example  .firebaserc  .gitignore  .secrets.baseline  DATA_SHOWCASE_README.md  DEPLOYMENT.md  Dockerfile  FINAL_SOLUTION_SUMMARY.md  FIRESTORE_EXAMPLE.md  HOW_TO_SEE_SESSION_INFO.md  JSON_OUTPUT_SOLUTION.md  README.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  SESSION_INFO_EMBEDDED_SOLUTION.md  SESSION_MANAGEMENT_SOLUTION.md  apphosting.prod.yaml  apphosting.yaml  bun.lockb  bun.test.setup.ts  bunfig.toml  compose.yaml  cors.json  create-test-data.js  demo_session_info.py  firebase.json  jest.config.js  jest.setup.js  main.py  next.config.ts  out.json  package-lock.json  package.json  patch_content.txt  pyproject.toml  pyrefly.toml  session_utils.py  standalone_server.py  storage.rules  tailwind.config.ts  (+13 more)
.firebase/: hosting.Lm5leHQ.cache
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
.idx/: dev.nix
.roo/: mcp.json
agents/job_posting/: __init__.py  agent.py
agents/matched_agent/: manifest.yaml
agents/matched_agent/prompts/: firestore_examples.md  match_analysis.md
agents/resume_parser/: __init__.py  agent.py
co_agent_recruitment/: IMPROVEMENT_REPORT.md  __init__.py  agent.py  agent_engine.py  app.py  callbacks.py  debug_resume_test.py  deploy.py  event_publisher.py  event_receiver.py  events.py  firestore_session_service.py  json_agents.py  main.py  test_resume_parsing.py  test_security.py  test_session_reuse.py  vertexAI_engine.py  vertex_agent.py
co_agent_recruitment/agents/: __init__.py
co_agent_recruitment/agents/matched_agent/: __init__.py  agent.py  manifest.yaml
co_agent_recruitment/agents/matched_agent/prompts/: firestore_examples.md  instructions.md
co_agent_recruitment/firestore_saver/: main.py  requirements.txt
co_agent_recruitment/job_posting/: __init__.py  agent.py
co_agent_recruitment/matcher/: agent.py  json_matcher.py
co_agent_recruitment/resume_agent/: agent.py
co_agent_recruitment/resume_parser/: __init__.py  agent.py
co_agent_recruitment/tests/: conftest.py  test_agents_json_output.py  test_api_endpoint.py  test_curl_equivalent.py  test_deployment.py  test_firestore_query.py  test_improvements.py  test_json_agents.py  test_json_output_fix.py  test_matcher_agent.py  test_resume_parsing.py  test_security.py  test_session.py  test_session_in_output.py  test_session_reuse.py
co_agent_recruitment/tools/: __init__.py  firestore_query.py  pubsub.py
co_agent_recruitment/utils/: __init__.py  download_blob.py  retry.py  text_scrubber.py
docs/: README_VERTEX_AI_DEPLOYMENT.md  blueprint.md
docs/architecture/: README.md  system_design.md
docs/architecture/img/: high_level.mmd  match_sequence.mmd
scripts/: test-security.mjs
src/: middleware.ts  next-auth.d.ts
src/__tests__/: actions.test.ts  auth.callbacks.test.ts  form-security.test.ts  middleware.test.ts
src/__tests__/hooks/: use-mobile.test.tsx  use-toast.test.ts
src/ai/: dev.ts  genkit.ts
src/ai/flows/: condense-job-data.ts  generate-seo-keywords.ts  suggest-job-titles.ts  summarize-candidate-profile.ts
src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
src/app/api/auth/[...nextauth]/: route.ts
src/app/api/auth/firebase/: route.ts
src/app/api/data/compatibility-scores/: route.ts
src/app/api/data/job-postings/: route.ts
src/app/api/data/resumes/: route.ts
src/app/api/generate-compatibility/: route.ts
src/app/api/publish-query/: route.ts
src/app/candidate/: page.tsx
src/app/candidate/profile/: page.tsx
src/app/company/: page.tsx
src/app/company/dashboard/: page.tsx
src/app/data/: page.tsx
src/app/unauthorized/: page.tsx
src/components/: ClientCandidateForm.tsx  candidate-form.tsx  data-analytics.tsx  data-dashboard.tsx  resume-uploader.tsx  simple-data-dashboard.tsx
src/components/layout/: footer.tsx  header.tsx  main-nav.tsx
src/components/ui/: calendar.tsx  chart.tsx
src/contexts/: AuthContext.tsx  app-context.tsx
src/hooks/: use-mobile.tsx  use-toast.ts
src/lib/: actions.ts  auth.ts  client-actions.ts  cloud-run-auth.ts  constants.ts  env-check.ts  firebase-admin.ts  firebase-client.ts  schemas.ts  server-actions.ts
