[project]
name = "Co-Agent-Recruitment"
version = "0.1.0"
description = "Python integration for Co-Agent-Recruitment project"
authors = [{ name = "Abhijit Gupta" }, {name = "Roopal Bansal"}]
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "a2a-sdk>=0.2.7",
    "dirtyjson>=1.0.8",
    "dotenv>=0.9.9",
    "fastapi",
    "firebase-admin>=6.9.0",
    "functions-framework>=3.8.3",
    "google-adk>=1.2.1",
    "google-cloud-aiplatform[adk,agent-engines]>=1.97.0",
    "google-cloud-documentai>=3.5.0",
    "google-cloud-pubsub>=2.30.0",
    "google-cloud-storage>=2.19.0",
    "google-genai>=1.20.0",
    "litellm>=1.72.4",
    "pip>=25.1.1",
    "pydantic-ai-slim[a2a,vertexai]>=0.2.16",
    "pydantic>=2.0.0",
    "uvicorn",
    "google-cloud-firestore>=2.11.0",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["co_agent_recruitment"]

[dependency-groups]
dev = [
    "ipython>=9.3.0",
    "jupyter>=1.1.1",
    "pyrefly>=0.20.2",
    "pytest-asyncio>=1.0.0",
    "pytest>=8.4.0",
]

[tool.pytest.ini_options]
testpaths = ["co_agent_recruitment/tests"]
asyncio_mode = "auto"

[tool.pyrefly]
# Remove the search-path and project-includes. Pyrefly will
# now automatically find your code in the standard 'src' location.
project-includes = [
    "co_agent_recruitment",
]
search-path = [
    "co_agent_recruitment",
]
project-excludes = [
    "co_agent_recruitment/tests",
]

python-interpreter = ".venv/bin/python"
